--- a/style.css
+++ b/style.css
@@ -1,11 +1,6 @@
-* {
-    align-items: center;
-    flex: content;
-    flex-direction: column;
-    flex-wrap: wrap;
-}
-
-.messageDisplay {
-    border: 3px;
-    border-color: black;
+.table1 {
+    margin: auto;
+    width: 50%;
+    border: 3px solid green;
+    padding: 10px;
 }
