--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ main {
     font-weight: 600;
 }
 
-/* GAMES */
+/* PROJECTS */
 
 .status {
     margin-bottom: 3rem;
@@ -122,7 +122,7 @@ main {
     border-radius: 2rem;
 }
 
-.games {
+.projects {
     margin: 5rem;
     display: flex;
     flex-direction: column;
@@ -154,7 +154,7 @@ main {
     height: 100%;
     background: rgba(236, 236, 236);
     position: absolute;
-    left: 60%;
+    left: 18%;
 }
 
 .card-info {
@@ -166,6 +166,19 @@ main {
 .percentage {
     font-weight: bold;
     background: linear-gradient(to right top, #65dfc9, #6cdbeb);
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+.full-stack img {
+    border-radius: 1rem;
+}
+
+.swampverse img {
+    border-radius: 1rem;
+}
+
+.crypto img {
+    border-radius: 1rem;
 }
