--- a/style.css
+++ b/style.css
@@ -1,35 +1,29 @@
+/* Universal Styles */
+
+html {
+    background-color: white;
+}
+
 * {
     font-family: 'Fjalla One', sans-serif;
 }
 
-.top-nav {
-    background-color: #333;
-    overflow: auto;
-    border-spacing: 2%;
-  }
+/* Header */
 
-.top-logo {
-    float:left;
-    padding: 1vh;
-}
-.top-nav a {
-    float: right;
-    color: #f2f2f2;
-    text-align: right;
-    padding: 1vh 3vh;
-    text-decoration: none;
-    font-size: 4vh;
-  }
+header {
 
-  .top-nav a:hover {
-    background-color: #ddd;
-    color: black;
-}
-.top-nav a.active {
-    background-color: #04AA6D;
-    color: white;
 }
 
-main img {
-    object-fit: fill;
+main.banner {
+
 }
+
+/* Nav */
+
+nav {
+
+}
+
+/* Section */
+
+/* Footer */
